--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,14 @@
 ---
-title: "ArseneLaurent"
+title: "Arsene Laurent"
+about:
+  id: hero-heading
+  template: trestles
+  image: C:\Users/AMLaurent/Documents/campusPhotos-43.jpg
+  links:
+    - text: LinkedIn
+      href: https://www.linkedin.com/in/arsene-laurent-44595b27b/
+    - text: Github
+      href: https://github.com/ST47S-FODS-Spring2025
 ---
 
 This is a Quarto website.
