changed quarto website template and checking to see if chocolate graph gets fixed

--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Arsene Laurent"
 about:
   id: hero-heading
-  template: trestles
+  template: jolla
   image: campusPhotos-43.jpg
   links:
     - text: LinkedIn
