--- a/ChocolateRatings.qmd
+++ b/ChocolateRatings.qmd
@@ -42,7 +42,7 @@ ggplot(top_15, (aes(x = company_location, y = average_rating))) +
 ```
 
 
-This data comes from the 2022-01-18 folder of the TidyTuesday GitHub repository. After selecting the relevant variables and creating a graph with rating as our y-axis and Country on the x-axis, we can see that companies based in Chile had the highest average rating for their chocolate bars. Unfortunately, this data is highly skewed by the fact that there were only two Chilean companies who had their chocolate bars rated. Below is a graph plotting all of the data, showing which country's companies had the highest rated chocolate bars.
+This data comes from the 2022-01-18 folder of the TidyTuesday GitHub repository. After selecting the relevant variables and creating a graph with average rating as our y-axis and Country on the x-axis, we can see that companies based in Chile had the highest average rating for their chocolate bars. Unfortunately, this data is highly skewed by the fact that there were only two Chilean companies who had their chocolate bars rated. Below is a graph plotting all of the data, showing which country's companies had the highest rated chocolate bars.
 
 ```{r}
 #| echo: false
