--- a/index.qmd
+++ b/index.qmd
@@ -15,6 +15,6 @@ about:
 
 :::{#hero-heading}
 
-Arsene is a student at Pomona College hoping to attain a double major in Computer Science and Geology as well as a minor in Data Science. In his free time, he plays video games, does origami, and competes as part of the Claremont Men's Volleyball Club.
+Arsene is a student at Pomona College majoring in Computer Science and Geology as well as a minor in Data Science. In his free time, he plays video games, does origami, and competes as part of the Claremont Men's Volleyball Club.
 
 :::
