--- a/ds002_project3.qmd
+++ b/ds002_project3.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Project 3"
+title: "Blackjack Simulation"
 description: |
   Probability of Winning in Blackjack with Standard Strategy
 author: Arsene Laurent
@@ -9,7 +9,7 @@ format:
     code-fold: true
 ---
 
-In this project, I originally wanted to calculate the probability of getting a royal flush in texas hold em poker. I then pivoted to the probability of being dealt a blackjack in blackjack. This was an idea that was more appealing to me, but I then realized that that probability was much too trivial. I then pivoted again to calculating the probability of winning versus the dealer in blackjack, using standard playing strategy where both the dealer and the player don't hit past 17.
+In this project, I originally wanted to calculate the probability of getting a royal flush in texas hold 'em poker. I then pivoted to the probability of being dealt a blackjack in blackjack. This was an idea that was more appealing to me, but I then realized that that probability was much too trivial. I then pivoted again to calculating the probability of winning versus the dealer in blackjack, using standard playing strategy where both the dealer and the player don't hit past 17.
 
 ```{r}
 library(purrr)
